# backend/openapi.json
@@ -305,6 +305,23 @@
             "ServerHardwareInfoDTO": {
                 "type": "object",
                 "properties": {
+                    "id": {
+                        "type": "string"
+                    },
+                    "name": {
+                        "type": "string"
+                    },
+                    "description": {
+                        "type": "string"
+                    },
+                    "status": {
+                        "type": "string",
+                        "enum": [
+                            "unavailable",
+                            "powered",
+                            "not-powered"
+                        ]
+                    },
                     "leds": {
                         "type": "array",
                         "items": {
@@ -325,6 +342,10 @@
                     }
                 },
                 "required": [
+                    "id",
+                    "name",
+                    "description",
+                    "status",
                     "leds",
                     "buttons",
                     "toggles"
